Minor clean up: JWT lives less, code and files cleanup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
+app.jwtExpirationInMs = 600000
 
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
